[package]
name = "zewif-zwl"
version = "0.1.0"
edition = "2024"
authors = ["dorianvp <dorianvp@zingolabs.org>"]

[dependencies]
zewif = { path = "../zewif" }

anyhow = "1.0.95"
hex = "0.4.3"
# bc-components = "^0.17.0"
# bc-envelope = "^0.24.0"
zcash_primitives = { version = "0.20.0", features = ["transparent-inputs"] }
zcash_encoding = "0.2.2"
zcash_keys = { version = "0.5.0", features = [
    "transparent-inputs",
    "sapling",
    "orchard",
] }
zcash_client_backend = { version = "0.15.0", features = [
    "transparent-inputs",
    "orchard",
] }

prost = { version = "0.13.5", features = ["prost-derive"] }
orchard_old = { package = "orchard", version = "=0.3.0" }
orchard_new = { package = "orchard", version = "0.10.1" }
sapling = { package = "sapling-crypto", version = "0.3", default-features = false }
incrementalmerkletree = "0.3.1"
zcash_protocol = "0.5.0"
zingolib = { git = "https://github.com/zingolabs/zingolib.git", rev = "965e81228d3a1d99b76c1e3c71202d8fdbbd41dc", features = [
    "test-elevation",
] }
byteorder = "1.5.0"
bip0039 = "=0.11.0"
secp256k1 = "0.30.0"
jubjub = "0.10.0"
ripemd = "0.1.3"
crypto_box = "0.9.1"
sodiumoxide = "0.2.7"
ring = "0.17.14"
lazy_static = "1.5.0"
sha2 = "0.10.8"


[features]
default = []
with-context = []
